force-app/main/default/objects/Call_Line_Retention__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Call_Line_Retentions</relationshipName>
    <type>Lookup</type>
</CustomField>