force-app/main/default/objects/Call_Line_Retention__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <formula>Contact__r.WelcomeCall_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>