force-app/main/default/objects/Call_Line_Retention__c/fields/Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Holder_Name__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holder Name</label>
    <type>Text</type>
</CustomField>