force-app/main/default/objects/Call_Line_Retention__c/fields/mdmid_owner__c.field-meta.xml
<CustomField>
    <fullName>mdmid_owner__c</fullName>
    <formula>Contact__r.mdmid_owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDM ID Owner</label>
    <type>Text</type>
</CustomField>