force-app/main/default/objects/Call_Line_Retention__c/fields/Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_No__c</fullName>
    <formula>Contact__r.Policy_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy No</label>
    <type>Text</type>
</CustomField>