force-app/main/default/objects/Call_Line_Retention__c/fields/Remark_Description__c.field-meta.xml
<CustomField>
    <fullName>Remark_Description__c</fullName>
    <label>Remark Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>