force-app/main/default/objects/Call_Line_Retention__c/fields/Retention_Status__c.field-meta.xml
<CustomField>
    <fullName>Retention_Status__c</fullName>
    <description>Status for takeout or release</description>
    <label>Retention Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>